<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.vudinhai.bt_sql_login.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAllCaps="true"
        android:textColor="@color/text"
        android:textSize="70sp"
        android:text="@string/login"
        android:gravity="center|bottom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textColor="@color/text"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/to"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="@color/text"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/yourAccount" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="2dp"
        android:id="@+id/edtEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="2dp"
        android:id="@+id/edtPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:background="@color/colorPrimary"
        android:id="@+id/btnSignIn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/signup"
            android:gravity="center|right"
            android:textColor="@color/text"

            android:id="@+id/txtSignUp"/>

        <Button
            android:paddingLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:background="@color/colorPrimaryDark"
            android:gravity="center|left"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="@string/signUp"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textColor="@color/text"
        android:text="@string/footer"
        android:gravity="bottom|center" />


</LinearLayout>
